--- a/src/main/resources/templates/views/index/bookList.html
+++ b/src/main/resources/templates/views/index/bookList.html
@@ -3,6 +3,9 @@
 	th:replace="~{views/commons/layout::layout(~{::head} ,~{::main} ) }">
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/mainContent/bookList.js"></script>
+<link rel="stylesheet" href="/css/mainContent/bookList.css"/>
+
 </head>
 <body>
 	<main class="main-container">
@@ -42,11 +45,16 @@
 							</div>
 							<div class="bookImg">
 								<img alt="Book" src="img/book3.jpg"> <span><a
-									href="/detail">새창보기</a></span> <span class="chang"><a href="/detail">미리보기</a></span>
+									href="/detail">새창보기</a></span> <span class="chang"><a
+									href="/detail">미리보기</a></span>
 							</div>
 							<div class="bookContent">
-								<h3><a href="/detail">당신이 누군가를 죽였다</a></h3>
-								<h4><a href="/detail">히가시노 게이고</a></h4>
+								<h3>
+									<a href="/detail">당신이 누군가를 죽였다</a>
+								</h3>
+								<h4>
+									<a href="/detail">히가시노 게이고</a>
+								</h4>
 								<h5>17,820원</h5>
 								<h6>"미스터리란 어떤 소설인가? 라는 질문을 들었을 때 이런 소설이다, 라고 대답할 수 있는
 									작품입니다."_히가시노 게이고 일본 최고의 베스트셀러 작가 히가시노 게이고의 최신 장편소설</h6>
