--- a/src/main/resources/static/css/common/reset.css
+++ b/src/main/resources/static/css/common/reset.css
@@ -23,6 +23,7 @@
 
 a, a:visited, a:active, a:hover {
     color: inherit;
+    text-decoration: none;
 }
 
 body {
@@ -32,6 +33,8 @@ body {
 }
 ol, ul {
 	list-style: none;
+	margin: none;
+	padding: none;
 }
 blockquote, q {
 	quotes: none;
