--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -62,7 +62,7 @@
 			<ul>
 				<li><a href="/bookList">베스트</a></li>
 				<li>신상품</li>
-				<li>이벤트</li>
+				<li><a href="/event">이벤트</a></li>
 			</ul>
 		</div>
 	</div>
