--- a/src/main/resources/templates/views/cart/cart-list.html
+++ b/src/main/resources/templates/views/cart/cart-list.html
@@ -53,7 +53,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 <tr>
                 	<td><input type="checkbox"></td>
                     <td class="product-info">
-                        <img src="book2.jpg" class="book-cover-img">
+                        <img src="/img/book-cover.png" class="book-cover-img">
                         <div class="book-info">
                             <p>해리포터와 마법사의 돌 2</p>
                             <p>J.K 롤링 저 / 강동혁 역</p>
