--- a/src/main/resources/templates/views/admin/inventory.html
+++ b/src/main/resources/templates/views/admin/inventory.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/css/admin/commons.css">
 <link rel="stylesheet" href="/css/admin/sidebar.css">
-<link rel="stylesheet" href="/css/admin/index.css">
+<script src="/js/admin/sidebar.js"></script>
 
 <head>
 	<meta charset="UTF-8">
