--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -9,7 +9,9 @@ body {
 }
 
 .logo{
+	padding:15px;
 	width: 80%;
+	    filter: hue-rotate(90deg) brightness(0.5) contrast(2);
 }
 
 .wrapper {
@@ -32,6 +34,7 @@ body {
 .sidebar ul {
     list-style-type: none;
     padding: 0;
+    padding-left: 20px;
 }
 
 .sidebar ul li {
@@ -44,7 +47,7 @@ body {
 }
 
 .sidebar ul li a {
-    color: #fff;
+    color: #fff9;
     text-decoration: none;
     display: block;
     padding: 10px;
