--- a/src/main/resources/templates/views/admin/exchange.html
+++ b/src/main/resources/templates/views/admin/exchange.html
@@ -13,7 +13,7 @@
 	<div style="display: flex;">
 		<th:block th:insert="~{views/admin/sidebar}" />
 		<div class="container">
-			<h1>취소/환불</h1>
+			<h1>불량/교환</h1>
 			<div class="search-box">
 				<div class="search-section">
 					<div class="filter-section">
@@ -38,17 +38,17 @@
 						<button type="button" class="button">기간 설정</button>
 					</div>
 					<div class="filter-section">
-						<label>환불수단</label>
+						<label class="jump">택배사</label>
 						<select>
 							<option>전체</option>
 						</select>
 					</div>
 					<div class="filter-section">
-						<label>처리상태</label>
+						<label>교환상태</label>
 						<label><input type="checkbox" checked> 전체</label>
-						<label><input type="checkbox" checked> 환불전</label>
-						<label><input type="checkbox" checked> 환불완료</label>
-						<label><input type="checkbox" checked> 환불보류</label>
+						<label><input type="checkbox" checked> 교환전</label>
+						<label><input type="checkbox" checked> 교환완료</label>
+						<label><input type="checkbox" checked> 교환보류</label>
 					</div>
 
 				</div>
@@ -59,12 +59,11 @@
 						<tr>
 							<th><input type="checkbox"></th>
 							<th>결제완료일</th>
-							<th>주문번호/환불번호</th>
+							<th>주문번호/교환번호</th>
 							<th>주문자</th>
 							<th>총 수량</th>
 							<th>총 환불액</th>
 							<th>사용 적립금</th>
-							<th>사용 쿠폰</th>
 							<th>결제 수단</th>
 							<th>환불 수단</th>
 							<th>처리상태</th>
@@ -85,7 +84,6 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
 							<td>환불전</td>
 							<td></td>
 
@@ -99,7 +97,6 @@
 							<td>이유진</td>
 							<td>1건</td>
 							<td>25,000</td>
-							<td></td>
 							<td></td>
 							<td></td>
 							<td></td>
