--- a/src/main/resources/templates/views/admin/order.html
+++ b/src/main/resources/templates/views/admin/order.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/css/admin/commons.css">
 	<link rel="stylesheet" href="/css/admin/sidebar.css">
-	<link rel="stylesheet" href="/css/admin/index.css">
 	<script src="/js/admin/sidebar.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -57,7 +56,7 @@
 					</div>
 					<div class="filter-section">
 						<label>주문일자</label>
-						<input type="date" value="2018-06-15"> ~ <input type="date" value="2019-06-15">
+						<input type="date" id="startDate"> ~ <input type="date" id="endDate">
 						<button>검색</button>
 					</div>
 				</div>
