--- a/src/main/resources/templates/views/admin/sidebar.html
+++ b/src/main/resources/templates/views/admin/sidebar.html
@@ -12,20 +12,29 @@
 				<a href="#" class="menu">상품 관리</a>
 				<ul class="submenu">
 					<li><a href="/admin/inventory">상품목록</a></li>
-					<li><a href="/admin/inventory/add">상품등록</a></li>
+					<li><a href="/admin/sellers/inventory/write">상품등록</a></li>
 				</ul>
 			</li>
 			<li>
 				<a href="#" class="menu">주문 관리</a>
 				<ul class="submenu">
 					<li><a href="/admin/order">주문내역</a></li>
-					<li><a href="/admin/order/refund">취소/교환/환불</a></li>
+					<li><a href="/admin/order/refund">취소/환불</a></li>
+					<li><a href="/admin/order/exchange">불량/교환</a></li>
+
+				</ul>
 			</li>
-		</ul>
-		<li><a href="#" class="menu">리뷰 관리</a></li>
-		<li><a href="#" class="menu">프로모션 및 쿠폰</a></li>
-		<li><a href="#" class="menu">클라우드</a></li>
-		<li><a href="#" class="menu">문의관리</a></li>
+			<li>
+				<a href="#" class="menu">사용자 관리</a>
+				<ul class="submenu">
+					<li><a href="/admin/users">고객 관리</a></li>
+					<li><a href="/admin/sellers">출판사 관리</a></li>
+				</ul>
+			</li>
+			<li><a href="#" class="menu">리뷰 관리</a></li>
+			<li><a href="#" class="menu">프로모션 및 쿠폰</a></li>
+			<li><a href="#" class="menu">클라우드</a></li>
+			<li><a href="#" class="menu">문의관리</a></li>
 		</ul>
 	</nav>
 </div>
