--- a/src/main/resources/static/css/mypage/coupon.css
+++ b/src/main/resources/static/css/mypage/coupon.css
@@ -1,5 +1,5 @@
 .selected {
-    color: red;
+    color: var(--main-orange);
 }
 
 
@@ -59,6 +59,23 @@
 .coupon-filters-all{
 	display: block;
 	padding: 10px;
+}
+
+#all-btn{
+	font-size: 20px;
+	cursor: pointer;
+}
+
+#all-text{
+	margin-bottom: 1.5px;
+	font-weight: 500;
+	margin-right: 5px;
+	cursor: pointer;
+}
+
+.trash-btn{
+	color: var(--dark-grey);
+	margin-right: 10px;
 }
 
 .delete-button{
@@ -122,7 +139,7 @@
 }
 
 .details:hover {
-    text-decoration: underline;
+    font-weight: bold;
 }
 
 @media (max-width: 1200px) {
@@ -135,4 +152,92 @@
     .coupon-container {
         grid-template-columns: repeat(1, 1fr); /* 1 item per row on very small screens */
     }
+}
+
+
+/* 모달 창 */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 500px;
+    height: 300px;
+    border-radius: 10px;
+}
+
+.close {
+    color: var(--dark-grey);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: relative;
+    bottom: 8px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.modal-register {
+	width: 400px;
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	padding: 25px;
+	position: relative;
+	margin: 10% auto;
+}
+
+.info{
+	background-color: var(--very-light-grey);
+	padding: 10px;
+	border-radius: 3px;
+	margin: 10px 0 20px 0;
+}
+
+.modal-register h2 {
+	margin: 0;
+	font-size: 24px;
+}
+
+.modal-register input {
+	width: calc(100% - 20px);
+	padding: 10px;
+	margin: 10px 0;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
+
+.modal-register p {
+	font-size: 14px;
+	line-height: 1.6;
+	color: #555;
+}
+
+.modal-register button {
+	width: 100%;
+	padding: 12px;
+	background-color: var(--main-orange);
+	border: none;
+	border-radius: 4px;
+	color: white;
+	font-size: 16px;
+	cursor: pointer;
+	font-weight: bold;
 }
