--- a/src/main/resources/templates/views/mypage/favorite.html
+++ b/src/main/resources/templates/views/mypage/favorite.html
@@ -4,6 +4,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 <head>
     <link rel="stylesheet" href="/css/mypage/sidebar.css">
     <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts-wordcloud/dist/echarts-wordcloud.min.js"></script>
 </head>
 <main>
     <div class="flex">
@@ -13,9 +14,11 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                 <div class="head">
                     <h1>나의 취향</h1>
                 </div>
+                
                 <!-- ECharts 예시 -->
                 <div id="chart1" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
                 <div id="chart2" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
+                <div id="main" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
 
                 <script type="text/javascript">
                     // 첫 번째 차트 초기화 및 옵션 설정
@@ -67,6 +70,71 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                         }]
                     };
                     myChart2.setOption(option2);
+                    
+                    //3번째 차트 표시
+         			// 워드 클라우드용 데이터 생성
+			        const wordCloudData = [
+			            { name: '경영학', value: 300 },
+			            { name: '동양문학', value: 270 },
+			            { name: '레크레이션, 행위예술', value: 240 },
+			            { name: '의학', value: 210 },
+			            { name: '총류', value: 180 },
+			            { name: '사회과학', value: 150 },
+			            { name: '예술', value: 120 },
+			            { name: '영미문학', value: 90 },
+			            { name: '상업, 무역', value: 60 },
+			            { name: '라틴어', value: 30 },
+			            { name: '기타문학', value: 20 },
+			        ];
+			
+			        // 데이터를 값에 따라 내림차순으로 정렬
+			        wordCloudData.sort((a, b) => b.value - a.value);
+			
+			        // 색상 배열 (값이 큰 순서대로 적용)
+			        const colors = ['#E0700E', '#FF9040', '#F49E51', '#7f7f7f'];
+			
+			        // 데이터에 색상 추가
+			        wordCloudData.forEach((item, index) => {
+			            item.textStyle = {
+			                color: index < 4 ? colors[index] : colors[3] // 5번째 이후부터는 네 번째 색상 사용
+			            };
+			        });
+			
+			        // ECharts 인스턴스 생성
+			        var chart = echarts.init(document.getElementById('main'));
+			
+			        // 차트 옵션 설정
+			        var option3 = {
+			            title: {
+			                text: '관심 도서 주제명', // 차트 제목
+			                left: 'center' // 제목을 중앙에 배치
+			            },
+			            tooltip: {
+			                show: true // 마우스 오버 시 툴팁 표시
+			            },
+			            series: [{
+			                type: 'wordCloud',
+			                gridSize: 15, // 글자 간 간격
+			                sizeRange: [20, 100], // 글자의 크기 범위 (최소 크기, 최대 크기)
+			                rotationRange: [0, 0], // 모든 단어가 0도 회전 상태로 정렬
+			                textStyle: {
+			                    normal: {
+			                        // color: function () {
+			                        //     // 여기서는 각 단어의 색상이 이미 설정되어 있으므로 이 부분은 무시될 수 있습니다.
+			                        //     return 'rgb(' + [
+			                        //         Math.round(Math.random() * 160),
+			                        //         Math.round(Math.random() * 160),
+			                        //         Math.round(Math.random() * 160)
+			                        //     ].join(',') + ')';
+			                        // }
+			                    },
+			                },
+			                data: wordCloudData // 워드 클라우드 데이터 설정
+			            }]
+			        };
+			
+			        // 차트 표시
+			        chart.setOption(option3);
                 </script>
             </div>
         </div>
