feat: cart update

--- a/src/main/resources/static/css/cart/cart-list.css
+++ b/src/main/resources/static/css/cart/cart-list.css
@@ -21,6 +21,8 @@ h1 {
     justify-content: center;
     position: relative;
 }
+.circle > i 
+
 .active {
     background-color: var(--main-orange);
 }
