--- a/src/main/resources/templates/views/cart/cart-list.html
+++ b/src/main/resources/templates/views/cart/cart-list.html
@@ -9,14 +9,17 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
         <h1>장바구니</h1>
         <div class="progress-bar">
             <div class="circle active">
+            	<i class="fa-solid fa-cart-shopping" aria-hidden="true"></i>
                 <div class="label">장바구니</div>
             </div>
             <div class="line"></div>
             <div class="circle">
+            	<i class="fa-regular fa-credit-card"></i>
                 <div class="label">주문/결제</div>
             </div>
             <div class="line"></div>
             <div class="circle">
+            	<i class="fa-solid fa-clipboard-check"></i>
                 <div class="label">주문완료</div>
             </div>
         </div>
