--- a/src/main/resources/templates/views/mypage/account.html
+++ b/src/main/resources/templates/views/mypage/account.html
@@ -68,27 +68,11 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		                </div>
 		
 		                <div class="form-group">
-		                    <label for="email">이메일 주소</label>
+		                    <label for="email">이메일</label>
 		                    <input type="text" id="email" value="y***2@naver.com">
 		                    <button class="edit-email">수정</button>
 		                </div>
 		
-		                <div class="form-group">
-		                    <label>이메일 수신 동의</label>
-		                    <div class="checkbox-group">
-		                        <label><input type="checkbox"> 동의</label>
-		                        <label><input type="checkbox"> 거부</label>
-		                    </div>
-		                </div>
-		                
-		                <div class="form-group">
-		                    <label>SMS 수신 동의</label>
-		                    <div class="checkbox-group">
-		                        <label><input type="checkbox"> 동의</label>
-		                        <label><input type="checkbox"> 거부</label>
-		                    </div>
-		                </div>
-		                
 		                <div class="flex-center">
 		                	<button class="change-userinfo">회원정보 수정</button>
 		                </div>
