--- a/src/main/resources/static/css/chatbot/bot.css
+++ b/src/main/resources/static/css/chatbot/bot.css
@@ -123,6 +123,7 @@
 	justify-content: flex-start;
 }
 #chat-content > div > div.icon > img{
+	border-radius: 30px;
     width: 50px;
     height: 45px;
 	padding: 10px;
