--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -21,7 +21,7 @@
 		</header>
 		        <section class="login-buttons-wrap">
             <button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
-            <button class="login-btn admin-login-btn" onclick="window.location.href='/admin-login'">판매자 로그인</button>
+            <button class="login-btn admin-login-btn" onclick="window.location.href='/login-admin'">판매자 로그인</button>
         </section>
 		<!--로그인 부분-->
 		<section class="login-wrap">
