--- a/src/main/resources/templates/views/login/signup.html
+++ b/src/main/resources/templates/views/login/signup.html
@@ -1,126 +1,121 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>북북 회원가입</title>
-    <link rel="stylesheet" href="/css/login/signup.css">
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script src="/js/login/address.js"></script>
-    <script src="/js/login/signup.js"></script> <!-- 외부 JS 파일 연결 -->
+<meta charset="UTF-8">
+<title>북북 회원가입</title>
+<link rel="stylesheet" href="/css/login/signup.css">
+<script
+	src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script src="/js/login/address.js"></script>
+<script src="/js/login/signup.js"></script>
 </head>
 <body>
-    <div class="main-signup">
-        <header>
-            <a th:href="@{/}">
-                <div class="logo">
-                    <img th:src="@{/img/Untitled_removebg_preview.png}" class="image">
-                </div>
-            </a>
-        </header>
+	<div class="main-signup">
+		<header>
+			<a th:href="@{/}">
+				<div class="logo">
+					<img th:src="@{/img/Untitled_removebg_preview.png}" class="image">
+				</div>
+			</a>
+		</header>
 
-        <!--회원가입 부분-->
-        <section class="signup-wrap">
-            <div>
-                <h3>아이디</h3>
-                <div class="signup-input">
-                    <input id="signup-id" type="text" required> <span class="signup-at"></span>
-                </div>
+		<section class="signup-wrap">
+			<div>
+				<h3>아이디</h3>
+				<div class="signup-input">
+					<input id="signup-id" type="text" required
+						pattern="^[a-zA-Z0-9]{4,12}$"
+						title="아이디는 4~12자리 영문, 숫자만 사용할 수 있습니다.">
+				</div>
 
-                <h3>비밀번호(8자리 이상)</h3>
-                <div class="signup-input">
-                    <input id="signup-pw" type="password" required> <span class="pw-lock"></span>
-                </div>
+				<h3>비밀번호(8자리 이상)</h3>
+				<div class="signup-input">
+					<input id="signup-pw" type="password" required
+						pattern="^(?=.*[a-zA-Z])(?=.*\d)(?=.*[!@#$%^&*(),.?:{}|<>]).{8,16}$"
+						title="비밀번호는 8~16자리 영문, 숫자, 특수문자를 포함해야 합니다.">
+				</div>
 
-                <div class="phone">
-                    <!--이름, 생년월일, 성별, 이메일-->
-                    <h3>이름</h3>
-                    <div class="signup-input">
-                        <input id="signup-name" type="text" required>
-                    </div>
+				<div class="phone">
+					<h3>이름</h3>
+					<div class="signup-input">
+						<input id="signup-name" type="text" required
+							pattern="^[가-힣]{2,5}$" title="이름은 2~5자리 한글만 사용할 수 있습니다.">
+					</div>
 
-                    <h3>생년월일</h3>
-                    <div class="birth-wrap">
-                        <div class="signup-input-birth">
-                            <input id="signup-birth" type="text" placeholder="(YYYY-MM-DD)"
-                                   maxlength="10" pattern="\d{4}-\d{2}-\d{2}"
-                                   title="형식: YYYY-MM-DD" required>
-                        </div>
-                    </div>
+					<h3>생년월일</h3>
+					<div class="birth-wrap">
+						<div class="signup-input-birth">
+							<input id="signup-birth" type="text" placeholder="(YYYY-MM-DD)"
+								maxlength="10" pattern="\d{4}-\d{2}-\d{2}"
+								title="형식: YYYY-MM-DD" required>
+						</div>
+					</div>
 
-                    <h3>성별</h3>
-                    <div class="signup-input">
-                        <select id="signup-gender" class="selectbox" name="gender" required>
-                            <option value="">성별</option>
-                            <option value="man">남자</option>
-                            <option value="woman">여자</option>
-                        </select>
-                    </div>
+					<h3>성별</h3>
+					<div class="signup-input">
+						<select id="signup-gender" class="selectbox" name="gender"
+							required>
+							<option value="">성별</option>
+							<option value="man">남자</option>
+							<option value="woman">여자</option>
+						</select>
+					</div>
 
-                    <h3>주민등록번호</h3>
-                    <div class="signup-input-ssn">
-                        <input id="signup-ssn" type="text" placeholder="주민등록번호 (13자리)"
-                               maxlength="14" required pattern="^\d{6}-\d{7}$" title="형식: 123456-1234567">
-                    </div>
+					<h3>주민등록번호</h3>
+					<div class="signup-input-ssn">
+						<input id="signup-ssn" type="text" placeholder="주민등록번호 (13자리)"
+							maxlength="14" required pattern="^\d{6}-\d{7}$"
+							title="형식: 123456-1234567">
+					</div>
 
-                    <h3>본인 확인 이메일</h3>
-                    <div class="signup-input">
-                        <input id="signup-email" type="email" placeholder="선택입력"
-                               pattern=".+@.+\..+" title="이메일 형식이 올바르지 않습니다.">
-                    </div>
+					<h3>본인 확인 이메일</h3>
+					<div class="signup-input">
+						<input id="signup-email" type="email" placeholder="선택입력"
+							pattern=".+@.+\..+" title="이메일 형식이 올바르지 않습니다.">
+					</div>
 
-                    <div class="phone">
-                        <h3>휴대전화</h3>
-                        <div class="signup-input-phone">
-                            <input id="signup-phone" type="text"
-                                   placeholder=" (예: 010-1234-5678)" maxlength="13"
-                                   pattern="01[0-9]-[0-9]{4}-[0-9]{4}" title="형식: 010-1234-5678"
-                                   required class="phone-part">
-                        </div>
-                    </div>
+					<div class="phone">
+						<h3>휴대전화</h3>
+						<div class="signup-input-phone">
+							<input id="signup-phone" type="text"
+								placeholder=" (예: 010-1234-5678)" maxlength="13"
+								pattern="01[0-9]-[0-9]{4}-[0-9]{4}" title="형식: 010-1234-5678"
+								required class="phone-part">
+						</div>
+					</div>
 
-                    <div class="address">
-                        <h3>주소</h3>
-                        <div class="signup-address">
-                            <input type="text" id="sample6_postcode" placeholder="우편번호" required>
-                            <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
-                        </div>
-                        <div class="signup-address">
-                            <input type="text" id="sample6_address" placeholder="주소" required>
-                        </div>
-                        <div class="signup-address">
-                            <input type="text" id="sample6_extraAddress" placeholder="참고항목">
-                        </div>
-                        <div class="signup-address">
-                            <input type="text" id="sample6_detailAddress" placeholder="상세주소" required>
-                        </div>
-                    </div>
+					<div class="address">
+						<h3>주소</h3>
+						<div class="signup-address">
+							<input type="text" id="sample6_postcode" placeholder="우편번호"
+								required> <input type="button"
+								onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
+						</div>
+						<div class="signup-address">
+							<input type="text" id="sample6_address" placeholder="주소" required>
+						</div>
+						<div class="signup-address">
+							<input type="text" id="sample6_extraAddress" placeholder="참고항목">
+						</div>
+						<div class="signup-address">
+							<input type="text" id="sample6_detailAddress" placeholder="상세주소"
+								required>
+						</div>
+					</div>
 
-                    <h3>수신 동의</h3>
-                    <div class="sign-check">
-                        <label>
-                            <input type="checkbox" id="email-consent">
-                            이메일 수신 동의
-                        </label>
-                        <label>
-                            <input type="checkbox" id="sms-consent">
-                            SMS 수신 동의
-                        </label>
-                    </div>
-
-                    <div>
-                        <!--가입하기-->
-                        <div class="signup-btn-wrap">
-                            <button id="signup-btn" onclick="validateForm(); return false;">가입하기</button>
-                        </div>
-                        <div class="publisher-signup-wrap">
-                            <a th:href="@{/admin-signup}">
-                                <button id="publisher-signup-btn">출판사 회원가입으로 전환</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
+					<div>
+						<div class="signup-btn-wrap">
+							<button id="signup-btn" onclick="validateForm(); return false;">가입하기</button>
+						</div>
+						<div class="publisher-signup-wrap">
+							<a th:href="@{/signup-admin}">
+								<button id="publisher-signup-btn">출판사 회원가입으로 전환</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
