feat:eventRullet update

--- a/src/main/resources/templates/views/index/event.html
+++ b/src/main/resources/templates/views/index/event.html
@@ -12,18 +12,23 @@
 </head>
 <body>
 	<main>
-		<div id="wrap" >
-			<div id="gameContainer">
-				<div class="board_start join">시작버튼</div>
-				<div class="board_on obj"></div>
-
-
-			</div>
-			<div id="popup_gift" class="popup">
-				<div class="lottery_present"></div>
-				<a href="javascript:;" class="close">닫기 </a>
-			</div>
-		</div>
+		<div id="wrap">
+            <div id="gameContainer">
+                <div class="board_start join">시작버튼</div>
+                <div class="board_on obj">
+                    <img src="img/cupon/cupon1.png" alt="상품1">
+                    <img src="img/cupon/cupon2.png" alt="상품2">
+                    <img src="img/cupon/cupon3.png" alt="상품3">
+                    <img src="img/cupon/cupon4.png" alt="상품4">
+                    <img src="img/cupon/cupon5.png" alt="상품5">
+                    <img src="img/cupon/cupon6.png" alt="상품6">
+                </div>
+            </div>
+            <div id="popup_gift" class="popup">
+                <div class="lottery_present"></div>
+                <a href="javascript:;" class="close">닫기</a>
+            </div>
+        </div>
 	</main>
 </body>
 </html>
