feat: mypage-qna

--- a/src/main/resources/templates/views/mypage/account.html
+++ b/src/main/resources/templates/views/mypage/account.html
@@ -4,6 +4,8 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 <head>
 	<link rel="stylesheet" href="/css/mypage/sidebar.css">
 	<link rel="stylesheet" href="/css/mypage/account.css">
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<script src="/js/"></script>
 </head>
 <main>
 	<div class="flex">
