--- a/src/main/resources/templates/views/commons/common.html
+++ b/src/main/resources/templates/views/commons/common.html
@@ -12,59 +12,67 @@
 		</div>
 		<div class="containers">
 			<div class="flex a-center">
-				<a href="/"><img src="/img/Untitled_removebg_preview.png" class="logo"></a>
+				<a href="/"><img src="/img/Untitled_removebg_preview.png"
+					class="logo" alt="로고"></a>
 				<div class="search-container">
-					<div class="search-tull">
-						<div class="section">
-							<select title="검색유형선택">
-								<option>통합검색</option>
-								<option>베스트셀러</option>
-								<option>교보문고</option>
-								<option>이벤트</option>
-							</select>
+					<form th:action="@{/search}" method="get">
+						<div class="search-tull">
+							<div class="section">
+								<select name="searchType" title="검색유형선택">
+									<option>통합검색</option>
+									<option>베스트셀러</option>
+									<option>교보문고</option>
+									<option>이벤트</option>
+								</select>
+							</div>
 						</div>
-					</div>
-					<div>
-						<input title="통합검색어 입력" placeholder="왜 세계는 10대의 SNS를 금지하나">
-					</div>
-					<div>
-						<i class="fa-solid fa-magnifying-glass"></i>
-					</div>
+						<div>
+							<input type="text" name="query" title="통합검색어 입력"
+								placeholder="왜 세계는 10대의 SNS를 금지하나">
+						</div>
+						<div>
+							<button type="submit">
+								<i class="fa-solid fa-magnifying-glass"></i>
+							</button>
+						</div>
+					</form>
 				</div>
-			</div>
-			<div class="header-middle-right">
-				<ul>
-					<li><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
-					<li><a href="/mypage/favorites"><i class="fa-regular fa-heart"></i></a></li>
-					<li><a href="/mypage/orders"><i class="fa-regular fa-user"></i></a></li>
-				</ul>
 			</div>
 		</div>
-		<div class="header-bottom">
-			<div class="dropdown">
-				<button id="categoryButton">
-					<i class="fa-solid fa-bars"></i>
-				</button>
-				<div id="categoryDropdown" class="dropdown-content">
-					<div class="category-container">
-						<div class="category-column main-categories">
-							<div class="category-box" data-category="novel">소설</div>
-							<div class="category-box" data-category="economy">경제/경영</div>
-							<div class="category-box" data-category="humanities">인문</div>
-							<!-- 추가 대분류 -->
-						</div>
-						<div class="category-column" id="subCategories">
-							<!-- 중분류와 소분류가 여기에 동적으로 로드됩니다 -->
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="header-middle-right">
 			<ul>
-				<li><a href="/bookList">베스트</a></li>
-				<li>신상품</li>
-				<li><a href="/event">이벤트</a></li>
+				<li><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+				<li><a href="/mypage/favorites"><i
+						class="fa-regular fa-heart"></i></a></li>
+				<li><a href="/mypage/orders"><i class="fa-regular fa-user"></i></a></li>
 			</ul>
 		</div>
+	</div>
+	<div class="header-bottom">
+		<div class="dropdown">
+			<button id="categoryButton">
+				<i class="fa-solid fa-bars"></i>
+			</button>
+			<div id="categoryDropdown" class="dropdown-content">
+				<div class="category-container">
+					<div class="category-column main-categories">
+						<div class="category-box" data-category="novel">소설</div>
+						<div class="category-box" data-category="economy">경제/경영</div>
+						<div class="category-box" data-category="humanities">인문</div>
+						<!-- 추가 대분류 -->
+					</div>
+					<div class="category-column" id="subCategories">
+						<!-- 중분류와 소분류가 여기에 동적으로 로드됩니다 -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<ul>
+			<li><a href="/bookList">베스트</a></li>
+			<li>신상품</li>
+			<li><a href="/event">이벤트</a></li>
+		</ul>
+	</div>
 	</div>
 </header>
 <!-- 여기까지 헤더 영역 -->
@@ -92,10 +100,10 @@
 		<div>
 			<h3>소셜 미디어</h3>
 			<div class="social-icons">
-				<a href="#"><i class="fab fa-facebook-f"></i></a> 
-				<a href="#"><i class="fab fa-twitter"></i></a> 
-				<a href="#"><i class="fab fa-instagram"></i></a> 
-				<a href="#"><i class="fab fa-youtube"></i></a>
+				<a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i
+					class="fab fa-twitter"></i></a> <a href="#"><i
+					class="fab fa-instagram"></i></a> <a href="#"><i
+					class="fab fa-youtube"></i></a>
 			</div>
 		</div>
 	</div>
